--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <nav>
         <a class="leftmenu__item" target="_blank" href="#">
           <span class="icon"><i class="material-icons">star</i></span>
-          <span class="title">Eum pariatur</span>
+          <span class="title">version 2.0</span>
         </a>
         <a class="leftmenu__item" target="_blank" href="#">
           <span class="icon"><i class="material-icons">favorite</i></span>
@@ -49,7 +49,7 @@
         </a>
         <a class="leftmenu__item" target="_blank" href="#">
           <span class="icon"><i class="material-icons">alarm</i></span>
-          <span class="title">Dolores et ut incidunt</span>
+          <span class="title"><a 20.html>ESTE ES EK 29 </span>
         </a>
         <a class="leftmenu__item" target="_blank" href="#">
           <span class="icon"><i class="material-icons"><textarea name="" id="">
@@ -82,6 +82,7 @@
       <div class="note-orange"></div>
     </div>
     <button type="button" class="btn btn-edit"><i class="fa fa-palette"></i></button>
+    <button type="button" class="btn btn-del"><i class="fa fa-trash"></i></button>
     <button type="button" class="btn btn-del"><i class="fa fa-trash"></i></button>
   </div>
 </div>
